[package]
name = "bbbsc"
version = "0.0.0"
edition = "2021"

# TODO: not optimized
[dependencies]
image = "0.25.1"
nom = "7.1.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
